5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1716_2508.log
== TEST (2019-05-16 10:02:37) 
-- CODE:
x = int(input(' digite um numero: '))
contador = 3
sinal = +1
result = x
while(contador < x):
	result = result + (sinal)
	sinal = sinal * 1
	contador += 3
print(round(result, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(result, n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:03:00) 
-- CODE:
x = int(input(' digite um numero: '))
contador = 3
sinal = +1
result = x
while(contador < x):
	result = result + (sinal)
	sinal = sinal * 1
	contador += 3
print(round(result,8))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 14:24:28) 
-- CODE:
num = int(input(' digite um numero: '))
cont = 1
a = 5
while(cont < num):
	den = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	a = a + (-1) ** (cont + 1) * 4 / den
	cont = cont + 1
print(round(a, 8))
-- EXECUTION TIME:
0.787505
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
5.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
5.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
5.14155633
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 14:24:54) 
-- CODE:
num = int(input('digite um numero: '))
cont = 1
a = 3
while(cont < num):
	den = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	a = a + (-1) ** (cont + 1) * 4 / den
	cont = cont + 1
print(round(a, 8))
-- EXECUTION TIME:
0.759233
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
digite um numero: 3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
digite um numero: 3.14155633
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 14:26:52) 
-- CODE:
num = int(input("No. de aproximacao: "))
cont = 1
a = 3
while(cont < num):
	den = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	a = a + (-1)**(cont + 1) * 4 / den
	cont = cont + 1
print(round(a, 8))
-- EXECUTION TIME:
0.690299
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
